# ld49

./: .gitattributes  README.md
client/: .gitignore  .prettierrc  package-lock.json  package.json  tsconfig.json  tslint.json
client/config/webpack/: webpack.config.dist.js
client/design/fonts/: charset.txt
client/patches/: three-bmfont-text+3.0.1.patch
client/src/: PNGLevel.ts  device.ts  env.ts  index.html  index.ts  renderer.ts  uniforms.ts
client/src/audio/: sounds.ts
client/src/controllers/: Controller.ts  GamePadController.ts  MouseKeyboardController.ts  TouchScreenController.ts  startControls.ts
client/src/factories/: ArchitectureModelFactory.ts
client/src/helpers/: Player.ts  architectureLibrary.ts  art.ts  spawnPoints.ts  types.ts
client/src/input/: KeyboardInput.ts  getKeyboardInput.ts
client/src/leaderboard/: index.ts
client/src/loaders/: assetLoader.ts
client/src/materials/: library.ts
client/src/meshes/: Box2DPreviewMesh.ts  CharacterMesh.ts
client/src/misc/: shapePaths.ts
client/src/public/: manifest.json
client/src/settings/: constants.ts
client/src/text/: FontFace.ts  TextLayout.ts  TextMesh.ts  TextSettings.ts  frag.glsl  vert.glsl
client/src/typings/: bmfont.d.ts  layout-bmfont-text.d.ts  shader.d.ts  three-bmfont-text.d.ts  threejs-camera-controller-first-person-desktop.d.ts  zzfx.d.ts
client/src/ui/: GameGUI.ts  SimpleGUIOverlay.ts
server/: Cargo.toml  Dockerfile  README.md  compose.yaml
server/example/: index.html  index.ts
server/migrations/: 20211002194242_leaderboard.sql
server/src/: main.rs
(+88 files in other folders)
