[package]
name = "leaderboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
sqlx = { version = "0.5.9", features = ["json", "macros", "migrate", "postgres", "runtime-async-std-native-tls", "time"] }
tide = "0.16.0"
